# Deep-learning-assignment-1

./: .gitignore  1  README.md  aggregate_data.py  autoregress.py  final_training_run.py  findbestrun.py  heatmap.py  main.py  pivot_table.py  pyproject.toml  visualize_json.py
final_models/: model_18_36_44.pt  model_18_39_56.pt  model_20_58_50.pt  model_20_59_09.pt  model_20_59_29.pt  model_20_59_46.pt  model_21_00_05.pt
model_architectures/: GRU.py  README.md  base_model.py  baseline.py  cnn_lstm_hybrid.py  gru.py  lstm.py  models.py  n_beats.py  one_dim_cnn.py  rnn.py  tcn.py  transformer.py
results/: README.md
results/2025-05-01_12-28-50/weights/: 2025-05-01_12-28-50_1D_CNN_channels:_[32,_64],_kernels:_[3,_3],_pooling:_max  2025-05-01_12-29-01_1D_CNN_channels:_[32,_64],_kernels:_[3,_3],_pooling:_max
results/2025-05-01_12-38-01/weights/: 2025-05-01_12-38-01_1D_CNN_channels:_[32,_64],_kernels:_[3,_3],_pooling:_max  2025-05-01_12-38-07_1D_CNN_channels:_[32,_64],_kernels:_[3,_3],_pooling:_max
results/2025-05-01_12-45-16/weights/: 2025-05-01_12-45-16_GRU_hidden_dimensions:_64,_number_of_layers:_1
results/2025-05-01_12-49-28/weights/: 2025-05-01_12-49-28_GRU_hidden_dimensions:_64,_number_of_layers:_1
results/2025-05-01_12-52-23/weights/: 2025-05-01_12-52-23_GRU_hidden_dimensions:_64,_number_of_layers:_1  2025-05-01_12-52-29_GRU_hidden_dimensions:_64,_number_of_layers:_1  2025-05-01_12-52-31_GRU_hidden_dimensions:_64,_number_of_layers:_2  (+7 more)
src/: dataloader.py  main.py  marc_experiment.py
utils/: README.md  dataloader.py
(+39 files in other folders)
