[tool.poetry]
name = "deep-learning-assignment-1"
version = "0.1.0"
description = ""
authors = ["Dorus <doruskeijzer@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.7.0"
scikit-learn = "^1.6.1"
scipy = "^1.15.2"
torchvision = "^0.22.0"
matplotlib = "^3.10.1"
click = "^8.1.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
